Add api endpoint whoami

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <body>
     <div>
         <h1>How to use this API</h1>
+        <h3>GET /api/whoami returen a json file which has the ip address, language and software attached to the get request header</h3>
     </div>
   </body>
 </html>
